--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "debug": "^2.2.0",
+    "js-combinatorics": "^0.5.2",
     "seedrandom": "^2.4.2",
+    "synaptic": "^1.0.7",
     "underscore": "^1.8.3"
   }
 }
